--- a/build.xml
+++ b/build.xml
@@ -3,20 +3,20 @@
     <!--this file was created by Eclipse Runnable JAR Export Wizard-->
     <!--ANT 1.7 is required                                        -->
     <!--define folder properties-->
-    <property environment="env" />
     <property name="dir.buildfile" value="."/>
     <property name="dir.workspace" value="${dir.buildfile}/../.."/>
     <property name="dir.jarfile" value="${dir.workspace}/git/kernel/jars"/>
+    <property environment="env" />
     <target name="create_run_jar">
-        <jar destfile="${dir.jarfile}/ncbi.utils.jar" filesetmanifest="mergewithoutmain">
+        <jar destfile="${dir.jarfile}/ncbi.utils" filesetmanifest="mergewithoutmain">
             <manifest>
                 <attribute name="Main-Class" value="org.theseed.ncbi.utils.App"/>
                 <attribute name="Class-Path" value="."/>
             </manifest>
+            <fileset dir="${dir.buildfile}/target/test-classes"/>
             <fileset dir="${dir.buildfile}/target/classes"/>
             <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/org/apache/commons/commons-lang3/3.9/commons-lang3-3.9.jar"/>
             <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/org/apiguardian/apiguardian-api/1.1.0/apiguardian-api-1.1.0.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/org/opentest4j/opentest4j/1.2.0/opentest4j-1.2.0.jar"/>
             <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/args4j/args4j/2.33/args4j-2.33.jar"/>
             <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/commons-io/commons-io/2.6/commons-io-2.6.jar"/>
             <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/org/slf4j/slf4j-api/2.0.4/slf4j-api-2.0.4.jar"/>
@@ -33,8 +33,11 @@
             <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/org/apache/commons/commons-collections4/4.4/commons-collections4-4.4.jar"/>
             <fileset dir="${dir.workspace}/git/brc.parent/shared/target/classes"/>
             <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/com/github/eprst/murmur3/0.3/murmur3-0.3.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/com/j2html/j2html/1.4.0/j2html-1.4.0.jar"/>
             <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/org/apache/commons/commons-math3/3.6.1/commons-math3-3.6.1.jar"/>
+            <fileset dir="${dir.workspace}/git/brc.parent/basic/target/classes"/>
+            <fileset dir="${dir.workspace}/git/core/target/classes"/>
+            <fileset dir="${dir.workspace}/git/brc.parent/sequence/target/classes"/>
+            <zipfileset excludes="META-INF/*.SF" src="${env.HOME}/.m2/repository/com/j2html/j2html/1.4.0/j2html-1.4.0.jar"/>
         </jar>
     </target>
 </project>
