--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.0</version>
                 <executions>
                     <!-- Run shade goal on package phase -->
                     <execution>
